--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
 
     
     <a id="menu-system" href="index.php?page=config">
-        <img class="icon" src="{{ page == 'config' ? icon1 : icon0 }}edit_settings.png"/></a>
+        <img class="icon" src="{{ page == 'config' ? icon1 : icon0 }}message_service.png"/></a>
    
 </div>
 
