--- a/pv.html
+++ b/pv.html
@@ -20,7 +20,7 @@ Photovoltaik
 
 {% block quad_main_top %}
 {% if once('solarlog') %}
-    <script src="pages/quad/solarlog.js"></script>
+    <!-- <script src="pages/quad/solarlog.js"></script> //-->
 {% endif %}
 
     
