--- a/rollos.html
+++ b/rollos.html
@@ -8,7 +8,7 @@
  */
 
 
-{% extends "rooms.html" %}
+{% extends "rooms-duo.html" %}
 
 
 {% block title %}
@@ -22,19 +22,36 @@ Rollos
 {% block content %}
 {% import "widget_list.html" as list %}
 <ul data-role="listview" data-dividertheme="c" class="nw_list">
-    <li data-role="list-divider">Erdgeschoss</li>
-    {{ list.blind('eg.kueche.jalousie.temp', 'Küche', 'eg.kueche.jalousie.lang', 'eg.kueche.jalousie.kurz', 'eg.kueche.jalousie.position', 'eg.kueche.jalousie.kurz', 'eg.kueche.jalousie.lamelle') }}
-    {{ list.blind('eg.essen.jalousie.rechts', 'Essen rechts', 'eg.essen.jalousie.rechts.lang', 'eg.essen.jalousie.rechts.kurz', 'eg.essen.jalousie.rechts.position', 'eg.essen.jalousie.rechts.kurz', 'eg.essen.jalousie.rechts.lamelle') }}
-    {{ list.blind('eg.essen.jalousie.mitte', 'Essen Türe', 'eg.essen.jalousie.mitte.lang', 'eg.essen.jalousie.mitte.kurz', 'eg.essen.jalousie.mitte.position', 'eg.essen.jalousie.mitte.kurz', 'eg.essen.jalousie.mitte.lamelle') }}
-    {{ list.blind('eg.essen.jalousie.links', 'Essen links', 'eg.essen.jalousie.links.lang', 'eg.essen.jalousie.links.kurz', 'eg.essen.jalousie.links.position', 'eg.essen.jalousie.links.kurz', 'eg.essen.jalousie.links.lamelle') }}
-    {{ list.blind('eg.wohnen.jalousie', 'Wohnen', 'eg.wohnen.jalousie.lang', 'eg.wohnen.jalousie.kurz', 'eg.wohnen.jalousie.position', 'eg.wohnen.jalousie.kurz', 'eg.wohnen.jalousie.lamelle') }}
-    <li data-role="list-divider">Dachgeschoss</li>
-    {{ list.blind('dg.schlafen.rollladen', 'Schlafen', 'dg.schlafen.rollladen.lang', 'dg.schlafen.rollladen.kurz', 'dg.schlafen.rollladen.position') }}
-    {{ list.blind('dg.ankleide.rollladen', 'Ankleide', 'dg.ankleide.rollladen.lang', 'dg.ankleide.rollladen.kurz', 'dg.ankleide.rollladen.position') }}
-    {{ list.blind('dg.masterbad.rollladen', 'Masterbad', 'dg.masterbad.rollladen.lang', 'dg.masterbad.rollladen.kurz', 'dg.masterbad.rollladen.position') }}
-    {{ list.blind('dg.arbeiten.rollladen', 'Arbeiten', 'dg.arbeiten.rollladen.lang', 'dg.arbeiten.rollladen.kurz', 'dg.arbeiten.rollladen.position') }}
-    {{ list.blind('dg.zimmer1.rollladen', 'Hunde', 'dg.zimmer1.rollladen.lang', 'dg.zimmer1.rollladen.kurz', 'dg.zimmer1.rollladen.position') }}
-    {{ list.blind('dg.zimmer2.rollladen', 'Gäste', 'dg.zimmer2.rollladen.lang', 'dg.zimmer2.rollladen.kurz', 'dg.zimmer2.rollladen.position') }}
+    <li data-role="list-divider">KG</li>
+    {{ list.blind('KG.Buero.Links.Rollo', 'Büro Links', 'KG.Buero.Links.Rollo.move', 'KG.Buero.Links.Rollo.stop', 'KG.Buero.Links.Rollo.pos') }}
+    {{ list.blind('KG.Buero.Mitte.Rollo', 'Büro Mitte', 'KG.Buero.Mitte.Rollo.move', 'KG.Buero.Mitte.Rollo.stop', 'KG.Buero.Mitte.Rollo.pos') }}
+    {{ list.blind('KG.Buero.Rechts.Rollo', 'Büro Rechts', 'KG.Buero.Rechts.Rollo.move', 'KG.Buero.Rechts.Rollo.stop', 'KG.Buero.Rechts.Rollo.pos') }}
+    {{ list.blind('KG.Buero.Rollos', 'ALLE', 'KG.Buero.Rollos.move', 'KG.Buero.Rollos.stop', 'KG.Buero.Rollos.pos') }}
+
+    <li data-role="list-divider">EG</li>
+    {{ list.blind('EG.Speisekammer.Links.Rollo', 'Speisekammer Links', 'EG.Speisekammer.Links.Rollo.move', 'EG.Speisekammer.Links.Rollo.stop', 'EG.Speisekammer.Links.Rollo.pos') }}
+    {{ list.blind('EG.Speisekammer.Rechts.Rollo', 'Speisekammer Rechts', 'EG.Speisekammer.Rechts.Rollo.move', 'EG.Speisekammer.Rechts.Rollo.stop', 'EG.Speisekammer.Rechts.Rollo.pos') }}
+	{{ list.blind('EG.Kueche.Raffstore', 'Küche', 'EG.Kueche.Raffstore.move', 'EG.Kueche.Raffstore.stop', 'EG.Kueche.Raffstore.pos', 'EG.Kueche.Raffstore.stop', 'EG.Kueche.Raffstore.abs_angle') }}
+	{{ list.blind('EG.Essen.Links.Raffstore', 'Essen Links', 'EG.Essen.Links.Raffstore.move', 'EG.Essen.Links.Raffstore.stop', 'EG.Essen.Links.Raffstore.pos', 'EG.Essen.Links.Raffstore.stop', 'EG.Essen.Links.Raffstore.abs_angle') }}
+	{{ list.blind('EG.Essen.Rechts.Raffstore', 'Essen Rechts', 'EG.Essen.Rechts.Raffstore.move', 'EG.Essen.Rechts.Raffstore.stop', 'EG.Essen.Rechts.Raffstore.pos', 'EG.Essen.Rechts.Raffstore.stop', 'EG.Essen.Rechts.Raffstore.abs_angle') }}
+	{{ list.blind('EG.Terrasse.Links.Raffstore', 'Terrasse Links', 'EG.Terrasse.Links.Raffstore.move', 'EG.Terrasse.Links.Raffstore.stop', 'EG.Terrasse.Links.Raffstore.pos', 'EG.Terrasse.Links.Raffstore.stop', 'EG.Terrasse.Links.Raffstore.abs_angle') }}
+	{{ list.blind('EG.Terrasse.Rechts.Raffstore', 'Terrasse Rechts', 'EG.Terrasse.Rechts.Raffstore.move', 'EG.Terrasse.Rechts.Raffstore.stop', 'EG.Terrasse.Rechts.Raffstore.pos', 'EG.Terrasse.Rechts.Raffstore.stop', 'EG.Terrasse.Rechts.Raffstore.abs_angle') }}
+	{{ list.blind('EG.Wohnen.Raffstores', 'Wohnen', 'EG.Wohnen.Raffstores.move', 'EG.Wohnen.Raffstores.stop', 'EG.Wohnen.Raffstores.pos', 'EG.Wohnen.Raffstores.stop', 'EG.Wohnen.Raffstores.abs_angle') }}
+    {{ list.blind('EG.WC.Rollo', 'Gäste-WC', 'EG.WC.Rollo.move', 'EG.WC.Rollo.stop', 'EG.WC.Rollo.pos') }}
+    {{ list.blind('EG.Garderobe.Rollo', 'Garderobe', 'EG.Garderobe.Rollo.move', 'EG.Garderobe.Rollo.stop', 'EG.Garderobe.Rollo.pos') }}
+    {{ list.blind('EG.Sammel.Rollos', 'ALLE', 'EG.Sammel.Rollos.move', 'EG.Sammel.Rollos.stop') }}
+	
+	<li data-role="list-divider">DG</li>
+    {{ list.blind('DG.Schlafen.Links.Rollo', 'Schlafen Links', 'DG.Schlafen.Links.Rollo.move', 'DG.Schlafen.Links.Rollo.stop', 'DG.Schlafen.Links.Rollo.pos') }}
+	{{ list.blind('DG.Schlafen.Rechts.Rollo', 'Schlafen Rechts', 'DG.Schlafen.Rechts.Rollo.move', 'DG.Schlafen.Rechts.Rollo.stop', 'DG.Schlafen.Rechts.Rollo.pos') }}
+    {{ list.blind('DG.Ankleide.Rollo', 'Ankleide', 'DG.Ankleide.Rollo.move', 'DG.Ankleide.Rollo.stop', 'DG.Ankleide.Rollo.pos') }}
+    {{ list.blind('DG.Kind.Links.Rollo', 'Kind', 'DG.Kind.Links.Rollo.move', 'DG.Kind.Links.Rollo.stop', 'DG.Kind.Links.Rollo.pos') }}
+    {{ list.blind('DG.Kind.Rechts.Rollo', 'Kind', 'DG.Kind.Rechts.Rollo.move', 'DG.Kind.Rechts.Rollo.stop', 'DG.Kind.Rechts.Rollo.pos') }}
+    {{ list.blind('DG.Arbeit.Rollo', 'Arbeit', 'DG.Arbeit.Rollo.move', 'DG.Arbeit.Rollo.stop', 'DG.Arbeit.Rollo.pos') }}
+	{{ list.blind('DG.Flur.Raffstore', 'Flur', 'DG.Flur.Raffstore.move', 'DG.Flur.Raffstore.stop', 'DG.Flur.Raffstore.pos', 'DG.Flur.Raffstore.stop', 'DG.Flur.Raffstore.abs_angle') }}
+	{{ list.blind('DG.Bad.Rollo', 'Bad', 'DG.Bad.Rollo.move', 'DG.Bad.Rollo.stop', 'DG.Bad.Rollo.pos') }}
+	{{ list.blind('DG.Bad.Dach.Rollo', 'Bad Dach', 'DG.Bad.Dach.Rollo.move', 'DG.Bad.Dach.Rollo.stop', 'DG.Bad.Dach.Rollo.pos') }}
+	{{ list.blind('DG.Sammel.Rollos', 'ALLE', 'DG.Sammel.Rollos.move', 'DG.Sammel.Rollos.stop') }}
 </ul>
 
 {% endblock %}
