--- a/system.html
+++ b/system.html
@@ -23,11 +23,11 @@ Server
 <ul data-role="listview" data-dividertheme="c" class="nw_list">
     <li data-role="list-divider">Smarthome.py</li>
     {{ list.value('smarthome.runtime', 'Laufzeit', 'smarthome.runtime', '', 'true') }}
-    {{ list.value('smarthome.threads', 'Threads', 'smarthome.threads', '') }}
-    {{ list.format('smarthome.memory', 'Speicher', 'smarthome.memory', 'transExByteToMegabyte', 'MB') }}
+    {{ list.value('env.core.threads', 'Threads', 'env.core.threads', '') }}
+    {{ list.format('env.core.memory', 'Speicher', 'env.core.memory', 'transExByteToMegabyte', 'MB') }}
     <li data-role="list-divider">Hardware</li>
     {{ list.value('system.uptime', 'Laufzeit', 'system.uptime', '', 'true') }}
-    {{ list.float('system.load', 'CPU', 'system.load', '%') }}
+    {{ list.float('env.system.load', 'CPU', 'env.system.load', '%') }}
     {{ list.float('system.memory', 'Speicher', 'system.memory', '%') }}
 {% endblock %}
 
