--- a/navigation.html
+++ b/navigation.html
@@ -52,6 +52,11 @@
     </a>
     </li>
     <li data-icon="false">
+    <a href="index.php?page=eg.flur">
+        <img class="icon" src="{{ icon0 }}scene_hall.png"/><h3>EG Flur</h3>
+    </a>
+    </li>
+    <li data-icon="false">
     <a href="index.php?page=aa.garten">
         <img class="icon" src="{{ icon0 }}scene_garden.png"/><h3>Garten</h3>
             <div class="ui-ri-aside">
@@ -107,6 +112,11 @@
         <img class="icon" src="{{ icon0 }}scene_visit_guests.png"/><h3>Gäste</h3>
             <div class="ui-ri-aside">
             </div>
+    </a>
+    </li>
+    <li data-icon="false">
+    <a href="index.php?page=dg.flur">
+        <img class="icon" src="{{ icon0 }}scene_hall.png"/><h3>DG Flur</h3>
     </a>
     </li>
     <li data-icon="false">
