--- a/base.html
+++ b/base.html
@@ -15,6 +15,7 @@
     <meta charset="utf-8" />
 	<meta name="viewport" content="user-scalable=yes, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
 	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 	<meta http-equiv="expires" content="0" />
 
     <link rel="icon" href="favicon.png" />
