--- a/dg.zimmer1.html
+++ b/dg.zimmer1.html
@@ -32,9 +32,9 @@ Hunde
 {% endblock %}
 
 {% block quad_top %}
-{{ plot.period_zoomable('plot.dg.zimmer1.heizung.ist', 'dg.zimmer1.heizung.ist', 'avg', '1w', 0, 15, 25, '', 'Ist') }}
+{{ plot.period('plot.dg.zimmer1.heizung.ist', 'dg.zimmer1.heizung.ist', 'avg', '1w', 0, 15, 25, '', 'Ist', '', '', '', '1h') }}
 {% endblock %}
 
 {% block quad_bottom %}
-{{ plot.period_zoomable('plot.dg.zimmer1.heizung.stellwert', 'dg.zimmer1.heizung.stellwert', 'avg', '1w', 0, 0, 100, '', 'Stellwert') }}
+{{ plot.period('plot.dg.zimmer1.heizung.stellwert', 'dg.zimmer1.heizung.stellwert', 'avg', '1w', 0, 0, 100, '', 'Stellwert', '', '', '', '1h') }}
 {% endblock %}
