--- a/eg.essen.html
+++ b/eg.essen.html
@@ -33,5 +33,5 @@ Essen
 {% endblock %}
 
 {% block quad_top %}
-{{ plot.period_zoomable('plot.eg.essen.heizung.ist', 'eg.essen.heizung.ist', 'avg', '1w', 0, 15, 25, '', 'Ist') }}
+{{ plot.period('plot.eg.essen.heizung.ist', 'eg.essen.heizung.ist', 'avg', '1w', 0, 15, 25, '', 'Ist', '', '', '', '1h') }}
 {% endblock %}
