--- a/eg.kueche.html
+++ b/eg.kueche.html
@@ -31,10 +31,10 @@ Kochen
 
 
 {% block quad_top %}
-{{ plot.period_zoomable('plot.eg.kueche.heizung.ist', 'eg.kueche.heizung.ist', 'avg', '1w', 0, 15, 25, '', 'Ist') }}
+{{ plot.period('plot.eg.kueche.heizung.ist', 'eg.kueche.heizung.ist', 'avg', '1w', 0, 15, 25, '', 'Ist', '', '', '', '1h') }}
 {% endblock %}
 
 {% block quad_bottom %}
-{{ plot.period_zoomable('plot.eg.kueche.heizung.stellwert', 'eg.kueche.heizung.stellwert', 'avg', '1w', 0, 0, 100, '', 'Stellwert') }}
+{{ plot.period('plot.eg.kueche.heizung.stellwert', 'eg.kueche.heizung.stellwert', 'avg', '1w', 0, 0, 100, '', 'Stellwert', '', '', '', '1h') }}
 {% endblock %}
 
