--- a/dg.masterbad.html
+++ b/dg.masterbad.html
@@ -32,10 +32,10 @@ Masterbad
 {% endblock %}
 
 {% block quad_top %}
-{{ plot.period_zoomable('plot.dg.masterbad.heizung.ist', 'dg.masterbad.heizung.ist', 'avg', '1w', 0, 15, 25, '', 'Ist') }}
+{{ plot.period('plot.dg.masterbad.heizung.ist', 'dg.masterbad.heizung.ist', 'avg', '1w', 0, 15, 25, '', 'Ist', '', '', '', '1h') }}
 {% endblock %}
 
 {% block quad_bottom %}
-{{ plot.period_zoomable('plot.dg.masterbad.heizung.stellwert', 'dg.masterbad.heizung.stellwert', 'avg', '1w', 0, 0, 100, '', 'Stellwert') }}
+{{ plot.period('plot.dg.masterbad.heizung.stellwert', 'dg.masterbad.heizung.stellwert', 'avg', '1w', 0, 0, 100, '', 'Stellwert', '', '', '', '1h') }}
 {% endblock %}
 
