--- a/dg.schlafen.html
+++ b/dg.schlafen.html
@@ -35,10 +35,10 @@ Schlafen
 {% endblock %}
 
 {% block quad_top %}
-{{ plot.period_zoomable('plot.dg.schlafen.heizung.ist', 'dg.schlafen.heizung.ist', 'avg', '1w', 0, 15, 25, '', 'Ist') }}
+{{ plot.period('plot.dg.schlafen.heizung.ist', 'dg.schlafen.heizung.ist', 'avg', '1w', 0, 15, 25, '', 'Ist', '', '', '', '1h') }}
 {% endblock %}
 
 {% block quad_bottom %}
-{{ plot.period_zoomable('plot.dg.schlafen.heizung.stellwert', 'dg.schlafen.heizung.stellwert', 'avg', '1w', 0, 0, 100, '', 'Stellwert') }}
+{{ plot.period('plot.dg.schlafen.heizung.stellwert', 'dg.schlafen.heizung.stellwert', 'avg', '1w', 0, 0, 100, '', 'Stellwert', '', '', '', '1h') }}
 {% endblock %}
 
